--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         id="custom-fingerprint-plugin"
-        version="1.0.0">
-          <name> Finger Print Scanner Plugin</name>
+        version="1.1">
+          <name> Custom Fingerprint Plugin</name>
           <description>Plugin to access external fingerprint scanning hardware device</description>
           <license>MIT</license>
           <keywords>Biometric scanner, Fingerprint scanner device,</keywords>
@@ -40,17 +40,6 @@
                   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
                   <uses-permission android:name="android.permission.READ_PHONE_STATE" />
                   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-              </config-file>
-              <config-file target="AndroidManifest.xml" parent="/manifest/application">
-                  <activity
-                      android:name="com.metacampus.scanner.FingerPrintScannerHandlerActivity"
-                      android:label="Enroll and Verify Fingerprint"
-                      android:screenOrientation="nosensor">
-                      <intent-filter>
-                          <category android:name="android.intent.category.DEFAULT" />
-                          <category android:name="android.intent.category.LAUNCHER" />
-                      </intent-filter>
-                  </activity>
               </config-file>
 
                 <source-file src="src/android/com/metacampus/scanner/FingerPrintScannerPlugin.java" target-dir="src/com/metacampus/scanner/"/>
